Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Wed Sep 5 2012 Thunor <thunorsif@hotmail.com>
- Updated examples/table/table.
- Moved the table widget's selected-row check to after signal connection
  as it wasn't firing on initial refresh.
- Fixed leading zero issue with strnatcmp.
- Added the "freeze-thaw" tag attribute to the table widget to stop
  rendering when adding data and to resume rendering when finished.
- Added save action function support to the tree widget.

* Tue Sep 4 2012 Thunor <thunorsif@hotmail.com>
- Added support for column sorting to the table widget.
- Added the "column-header-active" and "column-visible" tag attributes
  to the table widget enabling column-header locking and column hiding.
- Modified token_store_attr() to convert tag attribute names passed
  in from the XML separated with underscores to hyphenated strings.

* Sat Sep 1 2012 Thunor <thunorsif@hotmail.com>
- Added the "selected-row" tag attribute to the table widget to enable
  selecting a default row on initialisation and refresh (the firing of
  signals can be prevented with "block-function-signals").
- Added multiple selection mode to the table widget and updated the
  envvar export functions and removeselected action to cope with it.
- Fixed linecutter: the parts array needed to be initialised to null.
- Disabled the exporting of the entire contents of a few widgets on a
  signal for performance reasons; these are/were the *_ALL variables.
- Stopped variables_export_all() from exporting autonamed variables as
  it's pointless and would affect performance; this must be a bug.
- Added support for the save action function to the table widget.

* Fri Aug 31 2012 Thunor <thunorsif@hotmail.com>
- Fixed the table widget's signal and action handling issues.
- Added "exported-column" support to the table widget.
- Added initial "selection-mode" support to the table widget but not yet
  multiple selection mode.
